<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Crp</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log-In</string>
    <string name="reenter_password">Reenter password</string>
    <string name="username">Username</string>
    <string name="to_do">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_contracts">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="real_time">Discussão</string>
    <string name="best_scored">Mais Relevantes</string>
    <string name="todo">TODO</string>
    <string name="contracts">Contratos</string>
    <string name="comen_rio">Comenário</string>
    <string name="o_que_uma_criptomoeda">O que é uma criptomoeda?</string>
    <string name="explanation_cripto">As criptomoedas (Crypto) são moedas virtuais que usam geralmente uma rede descentralizada para realizar transações financeiras seguras.</string>
    <string name="explanation_app">Esta aplicação tem como objetivo fornecer uma plataforma para entusiastas de criptomoedas poderem discutir sobre o estado do mercado. Ao mesmo tempo dando uma forma rápida e eficaz de trocar criptomoedas entre si.</string>
    <string name="fechar">Fechar</string>
    <string name="comente">Comente</string>
    <string name="publicar">Publicar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_my_screen">MyScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="place_holder">place holder</string>
    <string name="_0">0</string>
    <string name="partilhar">Partilhar</string>
    <string name="ver">Ver</string>
    <string name="bem_vindo">Bem vindo aos Contratatos!</string>
    <string name="esta_p_gina_tem_como_obhetivo_facilitar_as_trocas_de_cryptomoedas_possivel_visualizar_contratos_selcionando_o_mesmo_e_depois_pressionando_o_bot_o_ver_tamb_m_possivel_e_partilhar_os_contratos_facilemte_com_facilmente_com_a_s_pessoa_s_de_quem_queres_comprar_ou_para_quem_queres_vender_com_o_bot_o_partilha">Esta página tem como obhetivo facilitar as trocas de cryptomoedas. É possivel visualizar contratos selcionando o mesmo e depois pressionando o botão \'ver\'. Também é possivel e partilhar os contratos facilemte com facilmente com a(s) pessoa(s) de quem queres comprar, ou para quem queres vender com o botão \'partilha\'.</string>
    <string name="estes_bot_es_est_o_localizados_no_final_da_p_gina">Estes botões estão localizados no final da página.</string>
    <string name="pre_visualiza_o">Pre-visualização</string>
    <string name="disclamer">(Esta pre visualização não foi aprovada para uso legal, é apenas para uso informativo.)</string>
    <string name="assinar">Assinando este documento aceito comprar ___________ (quantia a ser comprada) por ___________ (quantia a ser paga) em ____________ (tipo de cryptomoeda utilizada) através ___________ (tipo de cryptomoeda utilizada) Eu _________________ aceito os termos e condições propostos por _______________ neste contrato. Assinar: _________________ Assinar: _________________</string>
</resources>