<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/About"
        android:icon="?android:attr/actionModeFindDrawable"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        tools:targetApi="lollipop" />

    <item
        android:id="@+id/btn_logout"
        android:title="@string/log_out"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_log_out"/>

    <item
        android:id="@+id/contracts"
        android:title="@string/contracts"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_gallery"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>