<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="303dp"
        android:layout_height="566dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/esta_p_gina_tem_como_obhetivo_facilitar_as_trocas_de_cryptomoedas_possivel_visualizar_contratos_selcionando_o_mesmo_e_depois_pressionando_o_bot_o_ver_tamb_m_possivel_e_partilhar_os_contratos_facilemte_com_facilmente_com_a_s_pessoa_s_de_quem_queres_comprar_ou_para_quem_queres_vender_com_o_bot_o_partilha"
            android:textAlignment="center"
            android:textColor="#B6B6B6"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:gravity="center_horizontal"
            android:textColor="#B6B6B6"
            android:text="@string/estes_bot_es_est_o_localizados_no_final_da_p_gina"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/close_btn_contracts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CC0E0E"
                android:text="@string/fechar"
                app:backgroundTint="#CC0E0E" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>